Lots of various bug fixes
Took 41 minutes